--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
     "react": "18.3.1",
     "react-native": "0.77.1",
     "react-native-orientation-director": "^2.2.0",
